# mindrive-jepa

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: default.yaml  no_ema.yaml
scripts/: evaluate.py  preprocess_data.py  train.py
src/mindrive_jepa/: __init__.py
src/mindrive_jepa/data/: __init__.py  nuplan_reader.py  tokenizer.py
src/mindrive_jepa/evaluation/: __init__.py  surprise_score.py
src/mindrive_jepa/models/: __init__.py  context_encoder.py  position_decoder.py  predictor.py  target_encoder.py
src/mindrive_jepa/training/: __init__.py  collapse_monitor.py  trainer.py
src/mindrive_jepa/visualization/: __init__.py  birdseye.py  latent_viz.py  pygame_demo.py
