[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mindrive-jepa"
version = "0.1.0"
description = "A minimal JEPA-style latent world model for autonomous driving scenes"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
